iowow (1.4.11) UNRELEASED; urgency=medium

  * Added IW_ERROR_NOT_ALLOWED error code (iwlog.h)
  * Added RCR() error checking macro (basedefs.h)
  * Added iwlist_sort(), iwulist_sort() (iwarr.h)
  * Added iwstw_schedule_empty_only() (iwstw.h)
  * Added iwstw_queue_size() (iwstw.h)
  * Set O_CLOEXEC flag on all file open() calls
  * Added IW_ERROR_UNEXPECTED_RESPONSE error code (iwlog.h)
  * Added iwxstr_set_size(), iwxstr_destroy_keep_ptr() (iwxstr.h)
  * Added iwlist_at2() (iwarr.h)
  * Added handy ZRET definition (basedefs.h)
  * Added handy ZGO definition (basedefs.h)
  * Project code reformatted using uncrustify
  * Updated copyright headers
  * Fixed build errors on macOS
  * Removed dependency on glibc specific features
  * Added new iwxstr_pop() (iwxstr.h)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 23 Dec 2020 11:20:38 +0700

iowow (1.4.10) testing; urgency=medium

  * Tuned iwkv file resizing policy
  * Fixed misuse of `IWKV_OPTS.file_lock_fail_fast` (#35)
  * Correct handling of EINTR, EAGAIN in read/write functions (unix.c)

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 22 Dec 2020 23:55:36 +0700

iowow (1.4.9) testing; urgency=medium

  * Code review of iwkv cache keys comparison, related issue: https://github.com/Softmotions/ejdb/issues/291
  * Added `bool iwu_uuid_valid(const char *uuid)` (iwuuid.h)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 18 Nov 2020 15:04:03 +0700

iowow (1.4.8) testing; urgency=medium

  * Fixed serios bug concerning non-unique ejdb2 indexes, details: https://github.com/Softmotions/ejdb/issues/291
  * Fixed potencial memory leak in `iwlist_create()` (iwarr.h)
  * Fixed wrong `iwulist_clear()` behaviour (iwarr.h)
  * Code cleanup
  * Added `iwulist_at2()` (iwarr.h)
  * Removed not needed assertion (iwstree.c)

 -- Anton Adamansky <adamansky@gmail.com>  Sun, 08 Nov 2020 21:51:49 +0700

iowow (1.4.7) testing; urgency=medium

  * Correct handling of EINTR, EAGAIN in read/write functions (unix.c)
  * Minor fixes on iwhmap