@@ -1,0 +1,52 @@
+#pragma once
+#ifndef IWTP_H
+#define IWTP_H
+
+/**************************************************************************************************
+ * Threads pool.
+ *
+ * IOWOW library
+ *
+ * MIT License
+ *
+ * Copyright (c) 2012-2021 Softmotions Ltd <info@softmotions.com>
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ *  copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ *************************************************************************************************/
+
+#include "basedefs.h"
+
+IW_EXTERN_C_START
+
+struct _IWTP;
+typedef struct _IWTP*IWTP;
+
+/**
+ * @brief Task to execute
+ */
+typedef void (*iwtp_task_f)(void *arg);
+
+IW_EXPORT iwrc iwtp_create(int num_threads, int queue_limit, IWTP *out_tp);
+
+IW_EXPORT iwrc iwtp_schedule(IWTP tp, iwtp_task_f task, void *task_arg);
+
+IW_EXPORT void iwtp_shutdown(IWTP *tpp, bool wait_for_all);
+
+IW_EXTERN_C_END
+#endif
